Adding pageable to search of services